finish end-points
