# docs/swagger.json
@@ -9,6 +9,46 @@
     "host": "localhost:8001",
     "basePath": "/",
     "paths": {
+        "/atualizar/vagas": {
+            "put": {
+                "description": "Atualziar uma vaga no banco",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Update Jobs"
+                ],
+                "summary": "atualizar uma vaga",
+                "parameters": [
+                    {
+                        "description": "Dados da vaga",
+                        "name": "job",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dtos.Job"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Vaga atualizada com sucesso",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.Message"
+                        }
+                    },
+                    "400": {
+                        "description": "Erro de validação",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.APIError"
+                        }
+                    }
+                }
+            }
+        },
         "/cadastrar/vagas": {
             "post": {
                 "description": "Registra uma novo vaga no banco",
@@ -49,6 +89,46 @@
                 }
             }
         },
+        "/deletar/vagas": {
+            "delete": {
+                "description": "Deletar uma vaga no banco",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Deletar Jobs"
+                ],
+                "summary": "Deletar uma vaga",
+                "parameters": [
+                    {
+                        "description": "Dados da vaga",
+                        "name": "job",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dtos.JobDelete"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Vaga atualizada com sucesso",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.Message"
+                        }
+                    },
+                    "400": {
+                        "description": "Erro de validação",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.APIError"
+                        }
+                    }
+                }
+            }
+        },
         "/jobs": {
             "get": {
                 "description": "Retorna todas as vagas diponíveis no Banco (Colletion Testes)",
@@ -59,7 +139,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "jobs"
+                    "Read jobs"
                 ],
                 "summary": "Retorna vagas",
                 "responses": {
@@ -134,6 +214,9 @@
                 "descricao": {
                     "type": "string"
                 },
+                "id": {
+                    "type": "string"
+                },
                 "localizacao": {
                     "type": "string"
                 },
@@ -141,6 +224,14 @@
                     "type": "string"
                 },
                 "titulo": {
+                    "type": "string"
+                }
+            }
+        },
+        "dtos.JobDelete": {
+            "type": "object",
+            "properties": {
+                "id": {
                     "type": "string"
                 }
             }
