# src/dtos/job_delete_dto.go
@@ -1,0 +1,5 @@
+package dtos
+
+type JobDelete struct {
+	Id string `json:"id"`
+}
